--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,15 @@ body {
   transform: scale(1.1);
 }
 
+.autor-wrapper {
+  margin: 0 auto;
+  background: linear-gradient(90deg, #64b5f6, #1a73e8);
+  width: 150px;
+  align-content: center;
+  padding: 10px;
+  border-radius: 12px;
+}
+
 .mozabook-navigation-menu {
   height: 100%;
   background-color: var(--bg-color);
@@ -332,7 +341,6 @@ body {
 }
 
 .mozabook-form-button:hover {
-  background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
   color: #1a1a1a;
 }
@@ -352,7 +360,7 @@ body {
   border: none;
   font-size: 16px;
   transition: all 0.3s;
-  color: var(--text-color);
+  color: black;
   outline: none;
   position: relative;
   z-index: 1;
